style.css
/* ... */
#footer .widget-practice-area {
  width: 100%;
}
#footer .widget-practice-area ul li {
  width: 100%;
  position: relative;
}
#footer .widget-practice-area ul li .tooltip:hover span {
  -webkit-opacity: 1;
  -moz-opacity: 1;
  -ms-opacity: 1;
  -o-opacity: 1;
  opacity: 1;
  visibility: visible;
}
#footer .widget-practice-area ul li .tooltip:hover {
  color: #BFC8D1;
}
#footer .widget-practice-area ul li .tooltip span {
  top: -3px;
  left: -240px;
  width: 166px;
  background: white url("images/title-tooltip-icon.png") no-repeat 9px 11px;
  padding: 11px 33px;
  border: 2px solid #276eb7;
  color: #000;
  height: auto;
  -webkit-opacity: 0;
  -moz-opacity: 0;
  -ms-opacity: 0;
  -o-opacity: 0;
  opacity: 0;
  position: absolute;
  visibility: hidden;
  color: #6d7c88;
  z-index: 9999;
  word-wrap: break-word;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  -o-transition: all 0.5s;
  -ms-transition: all 0.5s;
  transition: all 0.5s;
  font-size: 12px;
}
#footer .widget_calendar table {
  width: 100%;
  color: #BFC8D1;
}
#footer .widget_calendar table caption {
  margin-bottom: 20px;
}
#footer .widget_calendar table td {
  padding: 3px 0px;
  text-align: center;
}
#footer .widget_calendar table #prev {
  text-align: left;
}
#footer .widget_calendar table #prev a {
  margin-left: 13px;
  color: #BFC8D1;
  text-decoration: underline;
}
#footer .widget_calendar table #prev a:hover {
  text-decoration: none;
}

/*
** 2 - Blog
*/
/* 2.1 - Posts */
#posts {
  width: 634px;
  float: left;
}
#posts form.post-password-form {
  width: 100%;
  text-align: center;
}
#posts form.post-password-form input[type="password"] {
  width: 200px;
  height: 30px;
  margin: 10px 0px 0px;
  padding: 0px 5px;
  color: #394753;
  border: 1px solid #CECECE;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -ms-box-sizing: border-box;
  outline: 0px;
}
#posts form.post-password-form input[type="submit"] {
  height: 30px;
  background: none repeat scroll 0% 0% #6D7C88;
  margin: 0px;
  padding: 5px 15px;
  color: #FFF;
  border: medium none;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -o-transition: all 0.3s;
  -ms-transition: all 0.3s;
  transition: all 0.3s;
  cursor: pointer;
}
#posts form.post-password-form input[type="submit"]:hover {
  -webkit-opacity: 0.8;
  -moz-opacity: 0.8;
  -ms-opacity: 0.8;
  -o-opacity: 0.8;
  opacity: 0.8;
}
#posts .sticky {
  width: 100%;
  padding-left: 30px;
  border-left: 5px solid #eee;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -ms-box-sizing: border-box;
}
#posts .category-sticky {
  width: 100%;
  padding-left: 30px;
  border-left: 5px solid #eee;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -ms-box-sizing: border-box;
}

.post {
  width: 100%;
  margin-bottom: 30px;
}
.post h3 {
  width: 100%;
  line-height: 28px;
  color: #394753;
  -ms-word-break: break-all;
  word-break: break-all;
  word-break: break-word;
  -moz-hyphens: auto;
  position: relative;
  font-family: "Roboto Slab", sans-serif;
  font-weight: 400;
  font-size: 24px;
}
.post h3 a {
  width: 100%;
  color: #394753;
  text-decoration: none;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -o-transition: all 0.3s;
  -ms-transition: all 0.3s;
  transition: all 0.3s;
}
.post h3 a:hover {
  -webkit-opacity: 0.7;
  -moz-opacity: 0.7;
  -ms-opacity: 0.7;
  -o-opacity: 0.7;
  opacity: 0.7;
}
.post .post-meta {
  width: 100%;
  margin-bottom: 30px;
  color: #394753;
  font-family: "Roboto Slab", sans-serif;
  font-size: 12px;
}
.post .post-meta a {
  line-height: 24px;
  color: #394753;
  text-decoration: none;
}
.post .post-meta a:hover {
  text-decoration: underline;
}
.post .post-image {
  width: 100%;
  height: auto;
  margin: 0px 0px 30px 0px;
}
.post .post-image img {
  width: auto;
  max-width:100%;
  height: auto;
  display: block;
}
.post .post-excerpt {
  width: 100%;
  line-height: 24px;
  color: #394753;
  -ms-word-break: break-all;
  word-break: break-all;
  word-break: break-word;
  -moz-hyphens: auto;
}
.post .post-excerpt img {
  max-width: 100%;
  height: auto;
}
.post .post-excerpt .wp-caption {
  max-width: 100%;
  height: auto;
}
.post .post-excerpt h1 {
  margin: 20px 0px;
  font-family: "Roboto Slab", sans-serif;
  font-size: 28px;
}
.post .post-excerpt h2 {
  margin: 20px 0px;
  font-family: "Roboto Slab", sans-serif;
  font-size: 26px;
}
.post .post-excerpt h3 {
  margin: 20px 0px;
  font-family: "Roboto Slab", sans-serif;
  font-size: 24px;
}
.post .post-excerpt h4 {
  margin: 20px 0px;
  font-family: "Roboto Slab", sans-serif;
  font-size: 20px;
}
.post .post-excerpt h5 {
  margin: 20px 0px;
  font-family: "Roboto Slab", sans-serif;
  font-size: 18px;
}
.post .post-excerpt h6 {
  margin: 20px 0px;
  font-family: "Roboto Slab", sans-serif;
  font-size: 18px;
}
.post .post-excerpt blockquote {
  padding-left: 10px;
  border-left: 10px solid #eee;
}
.post .post-excerpt p {
  margin: 20px 0px;
}
.post .post-excerpt table {
  width: 100%;
}
.post .post-excerpt table th {
  text-align: left;
}
.post .post-excerpt table td {
  padding: 0px 5px;
  border: 1px solid #D0D0D0;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -ms-box-sizing: border-box;
}
.post .post-excerpt table a {
  color: #394753;
  text-decoration: underline;
}
.post .post-excerpt table a:hover {
  text-decoration: none;
}
.post .post-excerpt dl dd {
  margin-left: 25px;
}
.post .post-excerpt ul li {
  list-style-type: disc;
  list-style-position: inside;
}
.post .post-excerpt ul li ul li {
  margin-left: 15px;
  list-style-type: circle;
}
.post .post-excerpt ol li {
  list-style-type: decimal;
  list-style-position: inside;
}
.post .post-excerpt ol li ol li {
  margin-left: 20px;
  list-style-type: lower-roman;
}
.post .post-excerpt a {
  color: #394753;
  text-decoration: underline;
}
/* ... */

